fix typos and grammar

--- a/pages/data-files/carcols.mdx
+++ b/pages/data-files/carcols.mdx
@@ -558,7 +558,7 @@ _
 ### Overview
 
 ``carcols.meta`` controls the modkits items that are on the vehicle. This includes aftermarket parts such as exhausts, trims, steering wheels etc. 
-There are many different options avaliable to control what the modkits do.
+There are many different options available to control what the modkits do.
 
 ### How to Setup Modkits
 To keep the file formatted in a way that aligns with GTA, the modkit items should be put at the very beginning of the carcols file.
@@ -642,15 +642,15 @@ Here's an example item:
 
 Below are the different options you can use for the modkit items.
 
-| Tag Name            | What is is?                                                                                                                                                                                                                      | Accepted value type | Options                                                                            |
+| Tag Name            | What is it?                                                                                                                                                                                                                      | Accepted value type | Options                                                                            |
 | ------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------- | ---------------------------------------------------------------------------------- |
 | modelName           | This is the name of the file in the stream folder.                                                                                                                                                                               | Name                | N/a                                                                                |
-| modShopLabel        | This is the name that will show up in the customization screens. This is not really used in FiveM / GTA unless its being customized within a Los Santos Customs                                                                  | Name                | N/a                                                                                |
+| modShopLabel        | This is the name that will show up in the customization screens. This is not really used in FiveM / GTA unless it's being customized within a Los Santos Customs                                                                  | Name                | N/a                                                                                |
 | linkedModels        | This links two modkits together allowing you to turn two or more things on when you turn on option on.                                                                                                                           | Items               | Items                                                                              |
 | turnOffBones        | This allows you to turn off bones within the car. For example, turning off a mirror when replacing the option. This has to be a misc item.                                                                                       | Item                | Items                                                                              |
 | type                | This defines the type of the modkit.                                                                                                                                                                                             | Name                | Find a list of types [here](https://gtamods.com/wiki/Carcols.ymt#type)             |
 | bone                | This defines what bone the modkit is linked to. Chassis is standard if you are just adding something on.                                                                                                                         | String              | Find a list of bones [here](https://gtamods.com/wiki/Carcols.ymt#bone)             |
-| collisionBone       | This defines what collision the modkit item will use. Once again, the chassis is normally standard but you can add different collisions.                                                                                         | Name                | Fin a lit of collisions [here](https://gtamods.com/wiki/Carcols.ymt#collisionBone) |
+| collisionBone       | This defines what collision the modkit item will use. Once again, the chassis is normally standard but you can add different collisions.                                                                                         | Name                | Find a list of collisions [here](https://gtamods.com/wiki/Carcols.ymt#collisionBone) |
 | cameraPos           | This allows you to change how the camera works with the modkit enables. This isn't normally changed from VMCP\_DEFAULT though.                                                                                                   | Name                | N/a                                                                                |
 | audioApply          | This options isn't used very often alongside that there isn't a lot of information about it. It's best to leave the value at 1.                                                                                                  | Name                | N/a                                                                                |
 | weight              | The weight is what is applied to the vehicle once the modkit item is on. For example, if you add a massive wing onto your car you can add a bit more weight to slow the vehicle down. This option directly affects the handling. | String              | N/a                                                                                |
