--- a/pages/tutorials/important-terms.mdx
+++ b/pages/tutorials/important-terms.mdx
@@ -46,9 +46,9 @@ on the mesh. Without textures shaders will apply the same value to the whole mes
 
 The <span className="nx-font-bold nx-text-blue-400">mesh</span> forms the shape of the 
 3D object, the <span className="nx-font-bold nx-text-blue-400">shader</span> makes the 
-mesh look different based on inputted values, 
-<span className="nx-font-bold nx-text-blue-400">textures</span> add detail to shaders 
-by inputtingdifferent vales at different spots on the mesh.
+mesh look different based on inputted values,
+<span className="nx-font-bold nx-text-blue-400">textures</span> add detail to shaders
+by inputting different values at different spots on the mesh.
 
 
 
