--- a/pages/tutorials/what-is-non-els.mdx
+++ b/pages/tutorials/what-is-non-els.mdx
@@ -20,7 +20,7 @@ Non-ELS is the default system, and far more powerful than ELS though more diffic
 For the purposes of this guide, we will use "the lighting system" to refer to Non-ELS in an effort to correct this misconception.
 
 This tutorial will put you on the path to success by teaching you the 3D fundamentals that most people skip over or fail to understand. Everything
-you learn in this tutorial is also applicable to other 3D work in other environments, so its a great introduction to 3D work in general.
+you learn in this tutorial is also applicable to other 3D work in other environments, so it's a great introduction to 3D work in general.
 
 ## How does it work?
 
@@ -123,7 +123,7 @@ You can learn more about `carcols.meta` here:
 
 Now you should have a basic understanding of how the lighting system works!
 
-- Sirens are empty objects controled by `carcols.meta`
+- Sirens are empty objects controlled by `carcols.meta`
 - Emissive meshes are parented to sirens
 - Sirens scale up and down to make the emissive mesh appear to flash
 
