--- a/pages/tutorials/workflow.mdx
+++ b/pages/tutorials/workflow.mdx
@@ -125,9 +125,9 @@ Zmod is vital piece of software for creating any type of vehicles within GTA. So
 * Save backups as often as possible,
 * Ensure you have your autosave settings set to as soon as possible but not too often to affect your work flow,
 * Make sure you have more than 1 autosave files generated, this reduces the possibility of autosave file corruption
-* Tred slowely and carefully while using it to ensure you crash the software as little as possible,
+* Tread slowly and carefully while using it to ensure you crash the software as little as possible,
 
-There isn't a lot of video tutorials on zmod as its a very specific software to a few games (GTA / ETS / Watch Dogs / Emergency 4 / Mafia 2 & Sims 3). A good channel i've found is [13StewartC (A No Pixel Dev).](https://www.youtube.com/@13Stewartc) his videos include:
+There isn't a lot of video tutorials on zmod as it's a very specific software to a few games (GTA / ETS / Watch Dogs / Emergency 4 / Mafia 2 & Sims 3). A good channel i've found is [13StewartC (A No Pixel Dev).](https://www.youtube.com/@13Stewartc) his videos include:
 
 * [Learning the basics of zmod](https://www.youtube.com/watch?v=a6Rb9WEQz1g)
 * [Importing / working with / creating custom vehicle animations,](https://www.youtube.com/watch?v=jxWz4wcYM0E\&t=257s)
@@ -139,7 +139,7 @@ There isn't a lot of video tutorials on zmod as its a very specific software to 
 * [Converting vehicles from other games to GTA,](https://www.youtube.com/watch?v=uC4TTi5oINM)
 * [How to use the attach tool,](https://www.youtube.com/watch?v=S2ODnOiWBvA)
 
-He has a lot more videos on his channel and its worth a check out if you are looking to get into vehicle development for GTA.
+He has a lot more videos on his channel and it's worth a check out if you are looking to get into vehicle development for GTA.
 
 Now that the basics of zmod has been covered, to create Non ELS vehicles it gets a tad more complicated and is where zmod comes in very handy. Here's a video on how to create Non-ELS vehicles that you can watch here:
 
